--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -38,16 +38,22 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "provisioning/general.yaml"
+    ansible.inventory_path = "provisioning/inventory.ini"
+    ansible.compatibility_mode = "2.0"
   end
 
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "provisioning/ctrl.yaml"
-    ansible.limit = "ctrl"
+    ansible.inventory_path = "provisioning/inventory.ini"
+    ansible.limit = "controler"
+    ansible.compatibility_mode = "2.0"
   end
   
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "provisioning/node.yaml"
+    ansible.inventory_path = "provisioning/inventory.ini"
     ansible.limit = "nodes"
+    ansible.compatibility_mode = "2.0"
   end
   
 end
