--- a/VM/provisioning/general.yaml
+++ b/VM/provisioning/general.yaml
@@ -47,7 +47,7 @@
     - name: Disable swap
       shell: |
         swapoff -a
-        sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+        sed -i '/ swap / s/^/#/' /etc/fstab
 
     - name: Load kernel modules
       shell: |
