Add br_netfilter module

--- a/VM/provisioning/general.yaml
+++ b/VM/provisioning/general.yaml
@@ -12,6 +12,7 @@
         - "ssh-keys/lemon.pub"
         - "ssh-keys/madalena.pub"
 
+    # ----- Section 0: Install basic dependencies.------
     - name: Update apt package index
       apt: update_cache=yes # sudo apt update
 
@@ -20,6 +21,7 @@
         name: ["curl", "wget", "apt-transport-https"]
         state: present # Ensures the package is installed.
 
+    # ----- Section 1: Install & Run Docker ------------
     - name: Install Docker
       apt: 
         name: docker.io
@@ -37,6 +39,8 @@
         groups: docker
         append: yes
 
+    
+    # ----- Section 2: Install Kubenetes dependency ----
     - name: Install kubectl
       get_url:
         url: https://storage.googleapis.com/kubernetes-release/release/v1.28.0/bin/linux/amd64/kubectl
@@ -44,17 +48,31 @@
         mode: '0755'
       when: ansible_os_family != 'Debian'
 
+
+    # ----- Section 3: Kubenetes setting -------------
     - name: Disable swap
       shell: |
         swapoff -a
         sed -i '/ swap / s/^/#/' /etc/fstab
 
-    - name: Load kernel modules
-      shell: |
-        modprobe overlay
-        modprobe br_netfilter
-      register: modprobe
-      changed_when: false
+    - name: Create module folder
+      file:
+        path: /etc/modules-load.d
+        state: directory
+        mode: "0755" # authorization for directory
+
+    - name: Copy kernel modules
+      copy:
+        dest: /etc/modules-load.d/k8s.conf
+        content: |
+          overlay
+          br_netfilter
+        mode: "0644" # authorization for file
+    
+    - name: Load module
+      modprobe:
+        name: br_netfilter
+        state: present
 
     - name: Configure sysctl
       copy:
