--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -36,6 +36,12 @@ Vagrant.configure("2") do |config|
     end
   end
 
+  # Add a minute delay to ensure VMs are fully booted before provisioning
+  config.vm.provision "shell", inline: <<-SHELL
+    echo "Waiting for VMs to boot..."
+    sleep 60
+  SHELL
+
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "provisioning/general.yaml"
     ansible.inventory_path = "provisioning/inventory.ini"
