--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -36,30 +36,31 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  # Add a minute delay to ensure VMs are fully booted before provisioning
-  config.vm.provision "shell", inline: <<-SHELL
-    echo "Waiting for VMs to boot..."
-    sleep 60
-  SHELL
-
-  config.vm.provision "ansible" do |ansible|
+  config.vm.provision "general", type: "ansible_local" do |ansible|
     ansible.playbook = "provisioning/general.yaml"
     ansible.inventory_path = "provisioning/inventory.ini"
-    ansible.compatibility_mode = "2.0"
   end
 
-  config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "provisioning/ctrl.yaml"
-    ansible.inventory_path = "provisioning/inventory.ini"
-    ansible.limit = "controler"
-    ansible.compatibility_mode = "2.0"
+  # Inside ctrl
+  config.vm.define "ctrl" do |ctrl|
+    ctrl.vm.provision "ctrl", type: "ansible_local" do |ansible|
+      ansible.playbook = "provisioning/ctrl.yaml"
+      ansible.inventory_path = "provisioning/inventory.ini"
+      ansible.limit = "ctrl"
+      ansible.compatibility_mode = "2.0"
+    end
   end
-  
-  config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "provisioning/node.yaml"
-    ansible.inventory_path = "provisioning/inventory.ini"
-    ansible.limit = "nodes"
-    ansible.compatibility_mode = "2.0"
+
+  # Inside each node
+  (1..WORKER_COUNT).each do |i|
+    config.vm.define "node-#{i}" do |node|
+      node.vm.provision "node", type: "ansible_local" do |ansible|
+        ansible.playbook = "provisioning/node.yaml"
+        ansible.inventory_path = "provisioning/inventory.ini"
+        ansible.limit = "node-#{i}"
+        ansible.compatibility_mode = "2.0"
+      end
+    end
   end
   
 end
