--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -39,6 +39,9 @@ Vagrant.configure("2") do |config|
   config.vm.provision "general", type: "ansible_local" do |ansible|
     ansible.playbook = "provisioning/general.yaml"
     ansible.inventory_path = "provisioning/inventory.ini"
+    ansible.extra_vars = {
+        num_workers: WORKER_COUNT
+    }
   end
 
   # Inside ctrl
@@ -62,7 +65,7 @@ Vagrant.configure("2") do |config|
       end
     end
   end
-  
+
 end
 
   
