Fix docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,29 @@
 version: '3.9'
 
 services:
-  web-app:
+  app:
     build:
       context: ../app
-    container_name: app
+    container_name: app_container
     ports:
-      - "3000:3000"
+      - "4200:4200"
     depends_on:
       - model-service
     environment:
       - MODEL_SERVICE_URL=model-service
       - MODEL_SERVICE_PORT=5050
+    networks:
+      - app-network
 
   model-service:
     build:
       context: ../model-service
-    container_name: model-service
+    container_name: model_container
     ports:
       - "5050:5050"
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
