--- a/VM/provisioning/node.yaml
+++ b/VM/provisioning/node.yaml
@@ -1,20 +1,16 @@
----
-- name: Set up k3s worker nodes
-  hosts: nodes
+- name: Join worker node to Kubernetes cluster
+  hosts: worker
   become: yes
+  vars:
+    kube_config_path: /etc/kubernetes/admin.conf
+
   tasks:
-    # - name: Fetch node token from controller
-    #   slurp:
-    #     src: /vagrant/k3s_node_token
-    #   register: token_content
+    - name: Generate the kubeadm join command on the controller
+      command: kubeadm token create --print-join-command
+      delegate_to: ctrl
+      register: join_command_output
 
-    # - name: Save node token locally
-    #   copy:
-    #     content: "{{ token_content.content | b64decode }}" # Decode using base64 format
-    #     dest: /tmp/k3s_node_token
-
-    # - name: Install k3s agent
-    #   shell: |
-    #     curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.2:6443 K3S_TOKEN=$(cat /tmp/k3s_node_token) sh -
-    #   args:
-    #     executable: /bin/bash
+    - name: Run the join command on the worker node
+      shell: "{{ join_command_output.stdout }}"
+      environment:
+        KUBECONFIG: "{{ kube_config_path }}"
