reverting the inventory name

--- a/VM/provisioning/inventory.cfg
+++ b/VM/provisioning/inventory.cfg
@@ -1,4 +1,4 @@
-[ctrl]
+[controler]
 ctrl ansible_host=192.168.56.100 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/ctrl/virtualbox/private_key
 
 [nodes]
