--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -23,7 +23,7 @@ spec:
             - containerPort: 8080
           env:
             - name: MODEL_SERVICE_URL
-              value: "model-service"
+              value: "team18-model-service"
             - name: MODEL_SERVICE_PORT
               value: "5050"
       imagePullSecrets:
