--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -27,6 +27,7 @@ Vagrant.configure("2") do |config|
       vb.memory = CTRL_MEMORY
       vb.cpus = CTRL_CPUS
     end
+    ctrl.ssh.insert_key = true
   end
 
   (1..WORKER_COUNT).each do |i|
@@ -38,6 +39,8 @@ Vagrant.configure("2") do |config|
         vb.memory = NODE_MEMORY
         vb.cpus = NODE_CPUS
       end
+      node.ssh.insert_key = true
+      node.vm.boot_timeout = 600
     end
   end
 
