--- a/k8s/monitoring.yaml
+++ b/k8s/monitoring.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: team18-app
+  name: team18-app-service
 spec:
   type: NodePort
   ports:
-    - port: 4200
-      targetPort: 4200
+    - port: 9090
+      targetPort: 9090
       nodePort: 30001
   selector:
     app: team18-app
