--- a/deploy/templates/monitoring.yaml
+++ b/deploy/templates/monitoring.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: team18-app-service
+  name: {{ .Values.releaseNamePrefix }}-app-service
 spec:
   type: NodePort
   ports:
-    - port: 9090
-      targetPort: 9090
-      nodePort: 30001
+    - port: {{ .Values.monitoring.appService.port }}
+      targetPort: {{ .Values.monitoring.appService.targetPort }}
+      nodePort: {{ .Values.monitoring.appService.nodePort }}
   selector:
-    app: team18-app
+    app: {{ .Values.releaseNamePrefix }}-app
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: team18-app-servicemonitor
+  name: {{ .Values.releaseNamePrefix }}-app-servicemonitor
   labels:
     release: prometheus
 spec:
   selector:
     matchLabels:
-      app: team18-app
+      app: {{ .Values.releaseNamePrefix }}-app
   endpoints:
-  - port: metrics
-    path: /metrics
-    interval: 15s
+    - port: metrics
+      path: /metrics
+      interval: 15s
